manifest-files/mydev_otherpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: otherpod
  namespace: mydev
spec:
  containers:
  - image: nginx
    name: nginx
