manifest-files/myingress-with-hosts.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mynginx
spec:
  rules:
  - host: mynginx
    http:
      paths:
      - backend:
          serviceName: mynginx
          servicePort: 80
